--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.4",
     "express": "^4.15.4",
     "jsonwebtoken": "^8.0.1",
-    "mongodb": "^2.2.31"
+    "mongodb": "^2.2.31",
+    "nodemon": "^1.12.1"
   }
 }
