--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
   "author": "4 Authors",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.18.1",
+    "body-parser": "^1.18.2",
     "cors": "^2.8.4",
-    "express": "^4.15.4",
-    "jsonwebtoken": "^8.0.1",
-    "mongodb": "^2.2.31",
-    "nodemon": "^1.12.1"
+    "express": "^4.16.2",
+    "jsonwebtoken": "^8.1.0",
+    "mongodb": "^2.2.34",
+    "nodemon": "^1.14.11",
+    "socket.io": "^2.0.4"
   }
 }
