--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jsonwebtoken": "^8.1.0",
     "mongodb": "^2.2.34",
     "nodemon": "^1.14.11",
+    "otplib": "^7.0.0",
     "socket.io": "^2.0.4"
   }
 }
