UI changes to Companion

--- a/Companion/app/src/main/AndroidManifest.xml
+++ b/Companion/app/src/main/AndroidManifest.xml
@@ -32,7 +32,8 @@
             </intent-filter>
 
         </activity>
-        <activity android:name=".MainActivity"/>
+        <activity android:name=".MainActivity"
+            android:windowSoftInputMode="adjustResize"/>
         <activity
             android:name=".OTP"
             android:parentActivityName=".MainActivity">
