Added set Pin activity after logging in

--- a/Companion/app/src/main/AndroidManifest.xml
+++ b/Companion/app/src/main/AndroidManifest.xml
@@ -23,17 +23,18 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".Login"
+        <activity
+            android:name=".Login"
             android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
-        <activity android:name=".MainActivity"
-            android:windowSoftInputMode="adjustResize"/>
+        <activity
+            android:name=".MainActivity"
+            android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".OTP"
             android:parentActivityName=".MainActivity">
@@ -43,6 +44,8 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
         </activity>
+        <activity android:name=".setPIN"
+            android:windowSoftInputMode="adjustResize"/>
     </application>
 
 </manifest>
