Overall app navigation curated

--- a/Companion/app/src/main/AndroidManifest.xml
+++ b/Companion/app/src/main/AndroidManifest.xml
@@ -31,14 +31,10 @@
             android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".OTP"
-            android:parentActivityName=".MainActivity">
-
-            <!-- The meta-data tag is required if you support API level 15 and lower -->
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity" />
+            android:excludeFromRecents="true">
         </activity>
         <activity android:name=".setPIN"
+            android:excludeFromRecents="true"
             android:windowSoftInputMode="adjustResize"/>
     </application>
 
