--- a/front-end/package.json
+++ b/front-end/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "npm": "^5.7.1",
     "vue": "^2.5.13",
     "vue-material": "^0.7.5",
     "vue-notify": "^1.0.1",
