--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   "author": "4 Authors",
   "license": "ISC",
   "dependencies": {
+    "atob": "^2.0.3",
     "body-parser": "^1.18.2",
+    "btoa": "^1.1.2",
     "cors": "^2.8.4",
     "express": "^4.16.2",
+    "f5stegojs": "^0.1.2",
     "jsonwebtoken": "^8.1.1",
     "mongodb": "^2.2.34",
     "nodemon": "^1.15.1",
