--- a/.travis.yml
+++ b/.travis.yml
@@ -9,24 +9,25 @@ android:
   - tools
   - build-tools-27.0.3
   - android-27
+  - android-22
   - extra-google-m2repository
   - extra-android-m2repository
-  - sys-img-armeabi-v7a-addon-google_apis-google-27
-  - sys-img-armeabi-v7a-addon-google_apis-google-27
+  - sys-img-armeabi-v7a-android-22
+  - sys-img-armeabi-v7a-android-27
 
 before_install:
 - cd Companion
 - chmod +x gradlew
 
 before_script:
-- echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
+- echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a
 - emulator -avd test -no-skin -no-audio -no-window &
 - android-wait-for-emulator
 - adb shell input keyevent 82 &
   
 script:
 - cd Companion
-- "./gradlew clean build connectedCheck -PdisablePreDex --stacktrace"
+- "./gradlew clean assembleDebug"
 
 notifications:
   email: true
