--- a/.travis.yml
+++ b/.travis.yml
@@ -26,8 +26,7 @@ before_script:
 - adb shell input keyevent 82 &
   
 script:
-- cd Companion
-- "./gradlew clean assembleDebug"
+- "./Companion/gradlew clean assembleDebug"
 
 notifications:
   email: true
