--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ before_script:
 - adb shell input keyevent 82 &
   
 script:
-- "./Companion/gradlew clean assembleDebug"
+- "./gradlew clean assembleDebug"
 
 notifications:
   email: true
